--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CoderViajes</title>
+    <title>SoloFuego</title>
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
+<main>
 <body>
    
 
@@ -30,6 +31,7 @@
                     <li><a href="../html/productos.html">Productos</a></li>
                     <li><a href="../html/local.html">Local</a></li>
                     <li><a href="../html/contacto.html">Contacto</a></li>
+                    <li><a href="../html/envios.html">Envios</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,7 +39,7 @@
 
 
 
-    <main>
+   
         <h1>Nuestro Contacto</h1>
 
         <h2>
